2008-01-28  Matthias Clasen  <mclasen@redhat.com>

	* gfile.c (g_file_copy_async): Fix docs

2008-01-27  Matthias Clasen  <mclasen@redhat.com>

	* gbufferedinputstream.c:
	* ginputstream.c:
	* goutputstream.c: Replace uses of G_GNUC_PRETTY_FUNCTION by
	__FUNCTION__.
	
2008-01-27  Matthias Clasen  <mclasen@redhat.com>

	* glocalfile.c: Avoid trivial differences in translatable strings.

2008-01-25  Matthias Clasen  <mclasen@redhat.com>

	* fam/fam-helper.c (fam_event_to_file_monitor_event): Make this
	build with gcc 3.4  (#509419)

2008-01-25  Matthias Clasen  <mclasen@redhat.com>

	* gfilemonitor.c: Add references to g_file_monitor_file/directory()
	(#509994, Murray Cumming)

2008-01-25  Matthias Clasen  <mclasen@redhat.com>

	* gioscheduler.h: Make GIOSchedulerJobFunc return boolean
	* gioscheduler.c: Keep calling io jobs until they return FALSE;
	this allows big jobs to be executed in chunks, instead of blocking
	the main loop for a long time.

	* gsimpleasyncresult.c:
	* giofile.c: Adapt callers.

2008-01-25  Alexander Larsson  <alexl@redhat.com>

        * gdesktopappinfo.c:
	Implement changes discussed on xdg list.
	Now we can add supported mimetypes by just using defaults.list
	We can also remove associations in defaults.list.

2008-01-25  Alexander Larsson  <alexl@redhat.com>

        * gdesktopappinfo.c:
	Don't make local copy of desktop file
	for mimetype changes if the file already
	supports the new mimetype.

2008-01-25  Matthias Clasen  <mclasen@redhat.com>

	* ginputstream.c:
	* goutputstream.c:
	* gbufferedinputstream.c:
	* glocalfile.c: String improvements.  (#511966, 
	 Theppitak Karoonboonyanan)

2008-01-24  Matthias Clasen  <mclasen@redhat.com>

	* gioscheduler.h: Expand docs a bit.

2008-01-24  Alexander Larsson  <alexl@redhat.com>

        * gdrive.[ch]:
	Add g_drive_get_identifier and
        g_drive_enumerate_identifiers

        * gvolume.[ch]:
        Add g_volume_get_identifier and
        g_volume_enumerate_identifiers
	